# FTP-CORE

./: .gitignore  Cargo.toml  Makefile  README.md  ftp-core-test.ods  ftp_core.pyi  kill.txt  mkdocs.yml  pyproject.toml
.github/: docs.sdcyml  tmp
.github/workflows/: ci.yml  docs.yml  release.yml  test  test.yml
builds/: ftp_core_bindings_pyo3-0.1.2-cp312-cp312-manylinux_2_34_x86_64.whl
crates/excel/Interop/: bindings.h
crates/ftp_core/: Cargo.toml
crates/ftp_core/src/: holding_struct.rs  lib.rs  utils.rs
crates/ftp_core/src/common/: func_ftp_int.rs  func_ftp_rate.rs  func_stock_var_instal.rs  tmp_calculer.rs
crates/ftp_core/src/method_stock/: func_stock_amort.rs
crates/ftp_core/tests/: integration_tests.rs
crates/ftp_core_bindings_c/: Cargo.toml  build.rs
crates/ftp_core_bindings_c/src/: lib.rs
crates/ftp_core_bindings_pyo3/: Cargo.toml
crates/ftp_core_bindings_pyo3/src/: lib.rs
docs/: _config.yml  index.md  mkdoc.yml  mkdocs.yml
docs/_archive/: about.md
docs/guide/: installation.md  quickstart.md
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/site/about/: index.html
docs/site/excel/api/: index.html
docs/site/excel/tutorials/tuto/: index.html
docs/site/guide/excel/setup/: index.html
docs/site/guide/excel/usage/: index.html
docs/site/guide/installation/: index.html
docs/site/guide/quickstart/: index.html
docs/site/python-generated/: src.html
docs/site/python/api/: index.html
docs/site/python/bindings/py_bindings/: index.html
docs/site/rust-generated/: .rustc_info.json
docs/site/rust-generated/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/site/rust-generated/doc/ftp_core/: all.html  fn.mainx.html  index.html  sidebar-items.js  struct.FtpResult.html
docs/site/rust-generated/doc/ftp_core/common/: index.html  sidebar-items.js
docs/site/rust-generated/doc/ftp_core/common/diff_matrix/: index.html
docs/site/rust-generated/doc/ftp_core/common/func_ftp_int/: fn.func_ftp_int.html  index.html  sidebar-items.js
docs/site/rust-generated/doc/ftp_core/common/func_ftp_rate/: fn.func_ftp_rate.html  index.html  sidebar-items.js
docs/site/rust-generated/doc/ftp_core/common/func_market_rate/: fn.func_market_rate.html  index.html  sidebar-items.js
docs/site/rust-generated/doc/ftp_core/common/func_stock_instal/: fn.func_stock_instal.html  index.html  sidebar-items.js
docs/site/rust-generated/doc/ftp_core/common/func_stock_var_instal/: fn.func_stock_var_instal.html  index.html  sidebar-items.js
docs/site/rust-generated/doc/ftp_core/common/tmp_calculer/: fn.cus_addition.html  index.html  sidebar-items.js
docs/site/rust-generated/doc/ftp_core/holding_struct/: struct.FtpResult.html
docs/site/rust-generated/doc/ftp_core_bindings_c/: all.html  fn.add.html  fn.safe_divide.html  index.html  sidebar-items.js
docs/site/rust-generated/doc/ftp_core_bindings_pyo3/: all.html  index.html
docs/site/rust-generated/doc/search.desc/ftp_core/: ftp_core-desc-0-.js
docs/site/rust-generated/doc/search.desc/ftp_core_bindings_c/: ftp_core_bindings_c-desc-0-.js
docs/site/rust-generated/doc/search.desc/ftp_core_bindings_pyo3/: ftp_core_bindings_pyo3-desc-0-.js
docs/site/rust-generated/doc/src/ftp_core/: holding_struct.rs.html  lib.rs.html  utils.rs.html
docs/site/rust-generated/doc/src/ftp_core/common/: diff_matrix.rs.html  func_ftp_int.rs.html  func_ftp_rate.rs.html  func_market_rate.rs.html  func_stock_instal.rs.html  func_stock_var_instal.rs.html  mod.rs.html  tmp_calculer.rs.html
docs/site/rust-generated/doc/src/ftp_core/method_flux/: flux_func_stock_amort.rs.html  flux_func_stock_var.rs.html  mod.rs.html
docs/site/rust-generated/doc/src/ftp_core_bindings_c/: lib.rs.html
docs/site/rust-generated/doc/src/ftp_core_bindings_pyo3/: lib.rs.html
docs/site/rust/bindings/rs_bindings/: index.html
docs/site/rust/core/rs_core/: index.html
docs/site/search/: search_index.json
docs/src/: autre  ftp_core.md  index.md
docs/src/guide/excel/: setup.md  usage.md
excel-addin/: Cargo.toml  build.rs
excel-addin/src/: lib.rs
excel/AddIn/: Wrapper.cs
excel_addin/: Cargo.toml
excel_addin/src/: lib.rs
ftp-core/: Cargo.toml
ftp-core/src/: lib.rs  utils.rs
ftp-core/src/common/: diff_matrix.rs  func_ftp_int.rs  func_market_rate.rs  func_stock_instal.rs  mod.rs  tmp_calculer.rs
ftp-core/src/method_flux/: flux_func_stock_amort.rs  flux_func_stock_var.rs
ftp-core/src/method_stock/: func_stock_amort.rs
ftp_core/: Cargo.toml
ftp_core/src/: holding_struct.rs  lib.rs  utils.rs
ftp_core/src/common/: func_ftp_int.rs  func_ftp_rate.rs  func_market_rate.rs  func_stock_instal.rs  mod.rs
ftp_core/src/method_flux/: flux_func_stock_amort.rs  flux_func_stock_var.rs  mod.rs
ftp_core/src/method_stock/: func_stock_var.rs
ftp_core/tests/: integration_tests.rs
ftp_core_excel/: Cargo.toml  build.rs
ftp_core_excel/src/: lib.rs
ftp_core_python/: Cargo.toml
ftp_core_python/src/: lib.rs
python/: pyproject.toml
python-lib/: Cargo.toml
python-lib/src/: lib.rs
python/src/: __init__.py  wrapper.py
python/tests/: test_wrapper.py
python_lib/: Cargo.toml
python_lib/src/: lib.rs
scripts/: build_c_bindings.sh  build_docs.sh  build_py_bindings.sh  release.py
site/python-generated/: search.js
src/: core_ftp.rs  holding_struct.rs  lib.rs  main.rs  utils.rs
src/common_funcs/: func_ftp_int.rs  func_ftp_rate.rs  func_market_rate.rs  func_stock_instal.rs  func_stock_var_instal.rs  mod.rs
src/method_flux/: flux_func_stock_amort.rs  flux_func_stock_var.rs  mod.rs
src/method_stock/: func_ftp_rate.rs  func_market_rate.rs  func_stock_amort.rs  func_stock_var.rs  mod.rs
(+10 files in other folders)
