[package]
name = "ftp_core_excel"
version = "0.1.0"
edition = "2021"
description = "Excel add-in for FTP calculations"
authors = ["Votre Nom <votre.email@example.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://votre-username.github.io/votre-repo"
repository = "https://github.com/votre-username/votre-repo"
readme = "README.md"
keywords = ["ftp", "calculator", "excel"]
categories = ["finance", "api-bindings"]
[lib]
crate-type = ["cdylib"]  # Pour générer une lib C

[dependencies]
ftp_core = { path = "../ftp_core" }
