[package]
name = "ftp_core_python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for FTP Core library"
authors = ["Votre Nom <votre.email@example.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://votre-username.github.io/votre-repo"
repository = "https://github.com/votre-username/votre-repo"
readme = "README.md"
keywords = ["ftp", "calculator", "python"]
categories = ["finance", "api-bindings"]
[lib]
crate-type = ["cdylib"]  # Pour PyO3

[dependencies]
ftp_core = { path = "../ftp_core" }
pyo3 = { version = "0.26.0", features = ["extension-module"] }


