[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ftp_core_python"
version = "0.1.6"
description = "Python wrapper for FTP_CALCULATOR Rust core"
authors = [{ name = "Charles Teuf", email = "ton_email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
docs = [
    "pdoc",
]

[project.urls]
Repository = "https://github.com/ton_org/FTP_CALCULATOR"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ftp_core_python._core"  # Nom du module compilé
