[package]
name = "ftp_core_bindings_c"
version = "0.1.795"
edition = "2021"
description = "Core FTP calculation library"
authors = ["Votre Nom <votre.email@example.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://votre-username.github.io/votre-repo"
repository = "https://github.com/votre-username/votre-repo"
readme = "README.md"
keywords = ["ftp", "calculator", "finance"]
categories = ["finance", "science"]

[lib]
name = "ftp_core_bindings_c"
crate-type = ["cdylib"]  # Pour les bindings C, on veut seulement cdylib

[dependencies]
ndarray = "0.16.1"
ftp_core = { path = "../ftp_core", version = "0.1.795" }  # ADD THIS LINE
cbindgen = "0.29.0"

[build-dependencies]
cbindgen = "0.29.0"  # Pour générer le header C

[dev-dependencies]
approx = "0.5"  # Pour les comparaisons de nombres à virgule flottante
